remove the entire destination line when arrival time has past, fix issue with route names not centering and overflowing properly

--- a/Source/Sass/application/header.scss
+++ b/Source/Sass/application/header.scss
@@ -18,6 +18,7 @@ header {
     border-bottom: 1px solid #CECECE;
     box-shadow: 0 0 8px #CCC;
     -webkit-transition: 0.25s all ease-in-out;
+    -webkit-transform: translateZ(0);
 
     &.open {
         top: 0;
